More work done with catch the square game. I got to make sure I stick to my README, I like to jump around on ideas to much sometimes :P

--- a/src/client/app/+catchthegame/catchthegame.component.css
+++ b/src/client/app/+catchthegame/catchthegame.component.css
@@ -44,6 +44,15 @@ p {
   background-color: #00AA00;
 }
 
+.block {
+  position:absolute;
+  background-color: #ffffff;
+  transform: translate( 100%, 50%)
+}
+
+
+/* Animations */
+
 .goto-top-right {
   transition: transform 1s ease;
   transform: translate(300%, 0%);
@@ -51,6 +60,16 @@ p {
 
 .goto-top-left {
   transition: transform 1s ease;
+  transform: translate(0%, 0%);
+}
+
+.goto-bottom-left {
+  transition: transform 1s ease;
   transform: translate(0%, 300%);
+}
+
+.goto-bottom-right {
+  transition: transform 1s ease;
+  transform: translate(300%, 300%);
 }
 
